wroking on station details

--- a/src/app/modules/admin/station-details/components/reviews-tab/reviews-tab.component.scss
+++ b/src/app/modules/admin/station-details/components/reviews-tab/reviews-tab.component.scss
@@ -95,7 +95,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  background: #fff;
+  background: #FAFAFA;
   border-radius: 8px;
   padding: 4px 12px;
   font-size: 16px;
