--- a/src/app/modules/admin/station-details/station-details.component.scss
+++ b/src/app/modules/admin/station-details/station-details.component.scss
@@ -448,3 +448,24 @@ mat-icon {
   0% { transform: translateX(-100%); }
   100% { transform: translateX(100%); }
 }
+
+swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
